fixed spacing on the header

--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    margin: 13px 20px 0 20px;
+    margin: 13px 20px 0 16px;
 }
 
 footer {
@@ -51,6 +51,7 @@ footer {
     background-size: 32px 32px;
     width: 25px;
     opacity: 80%;
+    padding-right: 5px
 }
 
 #app-launcher-image:hover {
@@ -145,7 +146,7 @@ footer {
     color: black;
     text-decoration: none;
     opacity: 75%;
-    padding: 2px;
+    padding: 2px 8px;
 }
 
 .header-link:hover {
